Update JVM 垃圾回收